// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button passes through className 1`] = `
<div
  className="cn-test sc-bwzfXH iJwxuO"
  onClick={undefined}
>
  <i
    className="fa fa-database"
  />
</div>
`;

exports[`Button renders with database icon for not busy state 1`] = `
<div
  className="sc-bwzfXH iJwxuO"
  onClick={undefined}
>
  <i
    className="fa fa-database"
  />
</div>
`;

exports[`Button renders with spinner icon for busy state 1`] = `
<div
  className="sc-bdVaJa IsYJH"
>
  <i
    className="fa fa-spinner fa-pulse"
  />
</div>
`;
